# protinter

./: README.md  pyproject.toml  result_hydrophobic.csv
