[project]
name = "protinter"
version = "0.9.2"
authors = [
  { name="Maxime Borry" },
]
description = "ProtInter : Protein interaction calculator"
readme = "README.md"
license = { text = "GNU-GPLv3" }
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.85",
    "click>=8.2.0",
]

[project.urls]
"Homepage" = "https://github.com/maxibor/protinter"

[project.scripts]
protinter = "protinter.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
